# ppbox

./: .gitignore  LICENSE  README.md  nhpp_fitter.py  pyproject.toml
.github/workflows/: python-test.yml
src/ppbox/: __init__.py  intensity_functions.py  nhpp_fitter.py  nhpp_plotting.py
tests/: test_correctness.py  test_diagnostics.py  test_intensity.py  test_prediction.py  test_visualization.py
